--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -77,3 +77,76 @@ footer {
 		user-select: none;
 	}
 }
+
+.title {
+	display: none;
+}
+
+@media (max-width: 768px) {
+	.arrow_btn {
+		height: 40px;
+		width: 40px;
+	}
+}
+
+@media (max-width: 576px) {
+	.wrapper {
+		grid-template-areas:
+			'm'
+			'f';
+		grid-template-rows: 1fr 100px;
+	}
+
+	.main {
+		display: grid;
+		grid-template-areas:
+			'scene scene scene'
+			'btn1 title btn2';
+		grid-template-columns: 20% 1fr 20%;
+	}
+
+	.header {
+		display: none;
+	}
+
+	.scene {
+		grid-area: scene;
+		width: 100%;
+	}
+
+	.title {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-size: 20px;
+		font-weight: bold;
+	}
+
+	.btn {
+		width: 100%;
+	}
+
+	.btn:first-child {
+		grid-area: btn1;
+	}
+
+	.btn:last-child {
+		grid-area: btn2;
+	}
+
+	.footer {
+		width: 100%;
+
+		.btn {
+			width: 20%;
+			background-color: #eee;
+		}
+
+		&__title {
+			font-size: 20px;
+		}
+	}
+}
+
+@media (max-width: 420px) {
+}
